--- a/src/style/modules/typography/typography.spacing.scss
+++ b/src/style/modules/typography/typography.spacing.scss
@@ -16,7 +16,8 @@
     blockquote,
     img,
     figure,
-    hr
+    hr,
+    table
   );
 
   @if export($output, "typography.spacing") {
